<resources>
    <string name="app_name">UK Teams</string>
    <string name="app_slogan">Search, Choose and Buy</string>
    <string name="main_login_button">Already have an account? Login</string>
    <string name="create_account">Create an Account</string>
    <string name="seller_login_sign_up">Seller login and Sign Up Area</string>
    <string name="login_phone_number_hint">Phone Number</string>
    <string name="login_password">Password</string>
    <string name="remember_me_checkbox">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="admin_link">for Admin</string>
    <string name="non_admin_link">for Non Admin</string>
    <string name="register_username_input">Name</string>
    <string name="register_phone_number_input">Phone Number</string>
    <string name="register_password_input">Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="slogan_category">Add New Product </string>
    <string name="welcome_dear_admin">Welcome Dear Admin </string>
    <string name="maintain_btn"> <br>   Maintain Products \n </br>  <br> (edit - delete from the database) </br> </string>
    <string name="check_new_orders_btn"> <br>   Check new orders \n </br>  <br> (from clients) </br> </string>
    <string name="check_products_btn"> <br> Check and Approve \n </br>  <br> (Newly uploaded Products from sellers)  </br> </string>
    <string name="admin_logout_btn">Logout</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="add_new_product_button">Add Product</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_search">Search</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="title_activity_seller_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="title_add_product">Add Product</string>
    <string name="title_logout">Logout</string>
    <string name="admin_product_name">Product Name</string>
    <string name="admin_product_price">Product Price</string>
    <string name="admin_product_description">Product Description</string>
    <string name="admin_apply_changes">Apply Changes</string>
    <string name="admin_delete_this_product">Delete This Product</string>
    <string name="new_orders">Mew Orders</string>
    <string name="products">Products</string>
    <string name="total_price">Total Price = </string>
    <string name="congratulations">Congratulations, your final order has been placed successfully. Soon it will be verified.</string>
    <string name="next_btn">Next</string>
    <string name="shipmet_details">Please write your Shipment Details</string>
    <string name="your_name_ConfirmFinalOrderActivity">Your Name</string>
    <string name="your_phone_number_ConfirmFinalOrderActivity">Your Phone Number</string>
    <string name="your_home_address_ConfirmFinalOrderActivity">Your Home Address</string>
    <string name="your_city_name_ConfirmFinalOrderActivity">Your City Name</string>
    <string name="confirm_btn_ConfirmFinalOrderActivity">Confirm</string>
    <string name="product_name_ProductDetailsActivity">Product Name</string>
    <string name="product_description_ProductDetailsActivity">Product Description</string>
    <string name="product_price_ProductDetailsActivity">Product Price</string>
    <string name="add_to_cart_btn_ProductDetailsActivity">Add to Cart</string>
    <string name="reset_Password_ResetPasswordActivity">Reset Password</string>
    <string name="verify_phone_number_ResetPasswordActivity">Please write your phone number</string>
    <string name="answer_the_question_ResetPasswordActivity">Answer the Following Security Questions</string>
    <string name="role_model_ResetPasswordActivity">Who is your role model?</string>
    <string name="who_is_your_hero_ResetPasswordActivity">Who is your favourite hero?</string>
    <string name="veriy_btn_ResetPasswordActivity">Verify</string>
    <string name="product_name_SearchProductsActivity">Search: Team name start with upper case eg: Manchester or Arsenal </string>
    <string name="search_SearchProductsActivity">Search</string>
    <string name="my_all_products">My All Products</string>
    <string name="seller_login_form_SellerLoginActivity">Seller login Form</string>
    <string name="seller_email_SellerLoginActivity">Email</string>
    <string name="seller_password_SellerLoginActivity">Password</string>
    <string name="seller_login_SellerLoginActivity">Login</string>
    <string name="seller_registration_form_SellerRegistrationActivity">Seller Registration Form</string>
    <string name="seller_registration_name_SellerRegistrationActivity">Name</string>
    <string name="seller_registration_phone_SellerRegistrationActivity">Phone</string>
    <string name="seller_registration_email_SellerRegistrationActivity">Email</string>
    <string name="seller_registration_password_SellerRegistrationActivity">Password</string>
    <string name="seller_registration_address_SellerRegistrationActivity">Shop or Business Address</string>
    <string name="seller_registration_btn_SellerRegistrationActivity">Register</string>
    <string name="seller_registration_have_account_SellerRegistrationActivity">Already have an Account? - Login</string>
    <string name="close_SettingsActivity">Close</string>
    <string name="update_SettingsActivity">Update</string>
    <string name="change_profile_SettingsActivity">Change Profile</string>
    <string name="phone_SettingsActivity">Phone Number</string>
    <string name="name_SettingsActivity">Full Name</string>
    <string name="address_SettingsActivity">Address</string>
    <string name="security_questions_SettingsActivity">Set Security Questions</string>
    <string name="product_name_cart_items_layout">Product Name</string>
    <string name="product_quantity_cart_items_layout">Product Quantity</string>
    <string name="product_price_cart_items_layout">Product Price</string>
    <string name="username_nav_header_home">User name</string>
    <string name="username_orders_layout">UserName</string>
    <string name="phone_number_orders_layout">Phone Number</string>
    <string name="total_price_orders_layout">Total Price</string>
    <string name="address_orders_layout">Address, City</string>
    <string name="date_time_orders_layout">Date Time</string>
    <string name="show_order_orders_layout">Show This Order of Products</string>
    <string name="product_name_products_items_layout">Product Name</string>
    <string name="product_price_products_items_layout">Product Price</string>
    <string name="product_description_products_items_layout">Product Description</string>
    <string name="product_name_seller_item_view">Product Name</string>
    <string name="product_status_seller_item_view">Product Status</string>
    <string name="product_price_seller_item_view">Product Price</string>
    <string name="product_description_seller_item_view">Product Description</string>
    <string name="login_activity_first_login">Welcome to login Screen</string>
    <string name="enter_password_activity_first_login">ENTER PASSWORD</string>
    <string name="password_hint_activity_first_login">password....</string>
    <string name="shop_entrance">Click here to go to the Shop </string>
</resources>