<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn="navigation_view">


    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/nav_cart"
            android:iconTint="@android:color/white"/>

        <item android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/nav_search"
            android:iconTint="@android:color/white"/>

        <item android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/nav_categories"
            android:iconTint="@android:color/white"/>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings"
            android:iconTint="@android:color/white"/>

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_logout"
            android:iconTint="@android:color/white"/>



    </group>



</menu>