<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.ResetPasswordActivity">


    <RelativeLayout
        android:id="@+id/relative123"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_Password_ResetPasswordActivity"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            />

    </RelativeLayout>


    <EditText
        android:id="@+id/find_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="14dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/relative123"
        android:hint="@string/verify_phone_number_ResetPasswordActivity"
        />

    <TextView
        android:id="@+id/title_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_the_question_ResetPasswordActivity"
        android:gravity="center"
        android:layout_below="@+id/find_phone_number"
        android:textSize="26dp"
        android:layout_marginTop="35dp"
        />


    <EditText
        android:id="@+id/question_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="14dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/title_questions"
        android:hint="@string/role_model_ResetPasswordActivity"
        />

    <EditText
        android:id="@+id/question_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="14dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/question_1"
        android:hint="@string/who_is_your_hero_ResetPasswordActivity"
        />


    <Button
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:padding="14dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/question_2"
        android:text="@string/veriy_btn_ResetPasswordActivity"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        />

</RelativeLayout>