<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sellers.SellerRegistrationActivity">

    <ImageView
        android:id="@+id/img_seller"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/sellerregister"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/title_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller_registration_form_SellerRegistrationActivity"
        android:gravity="center"
        android:layout_below="@id/img_seller"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/seller_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/title_seller"
        android:hint="@string/seller_registration_name_SellerRegistrationActivity"
        android:inputType="text"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/seller_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/seller_name"
        android:hint="@string/seller_registration_phone_SellerRegistrationActivity"
        android:inputType="number"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/seller_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/seller_phone"
        android:hint="@string/seller_registration_email_SellerRegistrationActivity"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/seller_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/seller_email"
        android:hint="@string/seller_registration_password_SellerRegistrationActivity"
        android:inputType="text"
        android:textSize="16sp"
    />


    <EditText
        android:id="@+id/seller_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/seller_password"
        android:hint="@string/seller_registration_address_SellerRegistrationActivity"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/seller_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/seller_address"
        android:background="@android:color/white"
        android:text="@string/seller_registration_btn_SellerRegistrationActivity"
        android:textAllCaps="false"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/seller_already_have_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/seller_registration_have_account_SellerRegistrationActivity"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>