<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sellers.SellerLoginActivity">


    <ImageView
        android:id="@+id/img_seller"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/sellerlogin"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/title_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller_login_form_SellerLoginActivity"
        android:gravity="center"
        android:layout_below="@id/img_seller"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_light"/>


    <EditText
        android:id="@+id/seller_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/title_seller"
        android:hint="@string/seller_email_SellerLoginActivity"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/seller_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/seller_login_email"
        android:hint="@string/seller_password_SellerLoginActivity"
        android:inputType="text"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/seller_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/seller_login_password"
        android:background="@android:color/holo_blue_light"
        android:text="@string/seller_login_SellerLoginActivity"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>



</RelativeLayout>