<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/seller_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name_seller_item_view"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />


        <TextView
            android:id="@+id/seller_product_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seller_product_name"
            android:text="@string/product_status_seller_item_view"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textColor="@color/colorPrimaryDark"
            />



        <ImageView
            android:id="@+id/product_seller_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/seller_product_state"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp"
            />

        <TextView
            android:id="@+id/product_seller_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_seller_image"
            android:text="@string/product_price_seller_item_view"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/product_seller_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_seller_price"
            android:text="@string/product_description_seller_item_view"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textColor="@color/colorPrimaryDark"
            />



    </RelativeLayout>

</androidx.cardview.widget.CardView>